<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/kiosk_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/app_version_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/app_version_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_version"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/app_version_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/one"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/check_internet_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/check_internet_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_availability"
                    android:textSize="24sp" />

                <ToggleButton
                    android:id="@+id/wifi_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColorHighlight="@color/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/server_check_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/server_check_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:text="@string/server_availaibility"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_server_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bluetooth_check_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/bluetooth_toggle_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_availaibility"
                    android:textSize="24sp" />

                <ToggleButton
                    android:id="@+id/bluetooth_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/device_config_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/text_config_check_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:text="@string/device_config_status"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_config_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:rippleColor="@color/black_semi_transparent" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/printer_check_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/btn_printer_text"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:text="@string/printer_availaibility"
                    android:textSize="24sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_printer_check"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/check_printer_status"
                    android:textSize="18sp"
                    app:rippleColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>