<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/layout_setup_temperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_loading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_up_device"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_instruction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_instruction"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/thermometer" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/instruction"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tv_instruction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/temperature_instruction"
                            android:textColor="@color/textColorDarkPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/layout_btn_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_start"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/colorAccent"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:text="@string/start_test"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:rippleColor="@color/black_semi_transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_manual"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="2"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:text="@string/manual_entry"
                    android:backgroundTint="@color/colorSecondary"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:rippleColor="@color/black_semi_transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="2"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    style="@style/Widget.MaterialComponents.Button"
                    android:backgroundTintMode="@color/colorPrimary"
                    app:strokeColor="@color/white"
                    android:text="@string/skip"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_measuring_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView

                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_speedometer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measuring"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                app:rippleColor="@color/black_semi_transparent"
                android:backgroundTintMode="@color/colorPrimary"
                app:strokeColor="@color/colorPrimary"
                android:shadowColor="@color/colorPrimaryLight"
                android:text="@string/cancel"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_reading_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingTop="50dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_pencil"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/ic_pencil" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/your_temperature_reading_is"
                            android:textColor="@color/textColorDarkPrimary"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_reading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/_98_3_f"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/colorAccent"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:text="@string/generate_report"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:rippleColor="@color/black_semi_transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_manual1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:text="@string/manual_entry"
                    android:backgroundTint="@color/colorSecondary"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:rippleColor="@color/black_semi_transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_retry"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:backgroundTintMode="@color/colorPrimary"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/retry"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:strokeColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
